--- a/Twitch.ipynb
+++ b/Twitch.ipynb
@@ -25,30 +25,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "da503178-86f6-4e2e-b476-f4c1125034f8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from os.path import exists\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "611a3543-dbbf-4983-bf7c-3964fd9f2925",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import zipfile\n",
-    "import io\n",
+    "target_file_edges = \"large_twitch_edges.csv\"\n",
+    "target_file_features = \"large_twitch_features.csv\"\n",
     "\n",
-    "# URL of the ZIP file\n",
-    "url = \"https://snap.stanford.edu/data/twitch_gamers.zip\"\n",
+    "def check_my_file(path):\n",
+    "    return exists(path)\n",
     "\n",
-    "# Send a GET request to the URL\n",
-    "response = requests.get(url)\n",
+    "if not check_my_file(target_file_features and target_file_edges):\n",
+    "    import requests\n",
+    "    import zipfile\n",
+    "    # import io\n",
     "\n",
-    "# Check if the request was successful (status code 200)\n",
-    "if response.status_code == 200:\n",
-    "    # Extract the content of the response as a bytes object\n",
-    "    zip_bytes = io.BytesIO(response.content)\n",
-    "    \n",
-    "    # Create a ZipFile object\n",
-    "    with zipfile.ZipFile(zip_bytes, 'r') as zip_ref:\n",
-    "        # Extract all contents to current directory else specify\n",
-    "        zip_ref.extractall() "
+    "    # URL of the ZIP file\n",
+    "    url = \"https://snap.stanford.edu/data/twitch_gamers.zip\"\n",
+    "\n",
+    "    # Send a GET request to the URL\n",
+    "    response = requests.get(url)\n",
+    "\n",
+    "    # Check if the request was successful (status code 200)\n",
+    "    if response.status_code == 200:\n",
+    "        # Extract the content of the response as a bytes object\n",
+    "        zip_bytes = io.BytesIO(response.content)\n",
+    "\n",
+    "        # Create a ZipFile object\n",
+    "        with zipfile.ZipFile(zip_bytes, 'r') as zip_ref:\n",
+    "            # Extract all contents to current directory else specify\n",
+    "            zip_ref.extractall() \n",
+    "else:\n",
+    "    print(\"Dataset already in local folder.\")"
    ]
   },
   {
@@ -74,8 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "twitch_edges_df = pd.read_csv('large_twitch_edges.csv')\n",
-    "twitch_features_df = pd.read_csv('large_twitch_features.csv')"
+    "df_edges = pd.read_csv('large_twitch_edges.csv')\n",
+    "df_features = pd.read_csv('large_twitch_features.csv')"
    ]
   },
   {
@@ -180,7 +215,7 @@
     }
    ],
    "source": [
-    "twitch_edges_df.describe()"
+    "df_edges.describe()"
    ]
   },
   {
@@ -323,7 +358,7 @@
     }
    ],
    "source": [
-    "twitch_features_df.describe()"
+    "df_features.describe()"
    ]
   },
   {
@@ -349,7 +384,7 @@
     }
    ],
    "source": [
-    "twitch_edges_df.info()"
+    "df_edges.info()"
    ]
   },
   {
@@ -359,8 +394,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "twitch_features_df['language'] = twitch_features_df['language'].astype('str')\n",
-    "twitch_features_df['affiliate'] = twitch_features_df['affiliate'].astype('str')"
+    "df_features['language'] = df_features['language'].astype('str')\n",
+    "df_features['affiliate'] = df_features['affiliate'].astype('str')"
    ]
   },
   {
@@ -381,7 +416,7 @@
     }
    ],
    "source": [
-    "type(twitch_features_df['language'][0])"
+    "type(df_features['language'][0])"
    ]
   },
   {
@@ -414,7 +449,7 @@
     }
    ],
    "source": [
-    "twitch_features_df.info()"
+    "df_features.info()"
    ]
   },
   {
@@ -527,7 +562,7 @@
     }
    ],
    "source": [
-    "twitch_edges_df.head()"
+    "df_edges.head()"
    ]
   },
   {
@@ -657,7 +692,7 @@
     }
    ],
    "source": [
-    "twitch_features_df.head()"
+    "df_features.head()"
    ]
   },
   {
@@ -686,7 +721,7 @@
     }
    ],
    "source": [
-    "twitch_features_df['dead_account'].unique()"
+    "df_features['dead_account'].unique()"
    ]
   },
   {
@@ -709,7 +744,7 @@
    "source": [
     "# days between first and last stream\n",
     "\n",
-    "twitch_features_df['life_time'].unique()"
+    "df_features['life_time'].unique()"
    ]
   },
   {
@@ -738,7 +773,7 @@
     }
    ],
    "source": [
-    "twitch_features_df['affiliate'].unique()"
+    "df_features['affiliate'].unique()"
    ]
   },
   {
@@ -748,7 +783,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "affiliate_counts = twitch_features_df['affiliate'].value_counts()"
+    "affiliate_counts = df_features['affiliate'].value_counts()"
    ]
   },
   {
@@ -1826,7 +1861,7 @@
     }
    ],
    "source": [
-    "twitch_edges_df.head(1)"
+    "df_edges.head(1)"
    ]
   },
   {
@@ -1898,7 +1933,7 @@
     }
    ],
    "source": [
-    "twitch_features_df.head(1)"
+    "df_features.head(1)"
    ]
   },
   {
@@ -1919,7 +1954,7 @@
     }
    ],
    "source": [
-    "twitch_edges_df['numeric_id_1'][0]"
+    "df_edges['numeric_id_1'][0]"
    ]
   },
   {
@@ -1957,9 +1992,9 @@
     "\n",
     "# Example usage: calculate similarity between streamers 1 and 3\n",
     "\n",
-    "similarity_score = jaccard_similarity_features(twitch_edges_df['numeric_id_1'][0], twitch_edges_df['numeric_id_1'][1])\n",
+    "similarity_score = jaccard_similarity_features(df_edges['numeric_id_1'][0], df_edges['numeric_id_1'][1])\n",
     "\n",
-    "twitch_edges_df['numeric_id_1'][0]\n",
+    "df_edges['numeric_id_1'][0]\n",
     "print(f\"Jaccard similarity between streamer 1 and 3: {similarity_score}\")\n",
     "\n",
     "# Set a threshold to determine a link prediction (adjust based on your data)\n",
@@ -1991,8 +2026,8 @@
    "outputs": [],
    "source": [
     "encoder = OneHotEncoder()\n",
-    "encoded_features = encoder.fit_transform(twitch_features_df[['language']])\n",
-    "# twitch_features_df['language']"
+    "encoded_features = encoder.fit_transform(df_features[['language']])\n",
+    "# df_features['language']"
    ]
   },
   {
@@ -2059,7 +2094,7 @@
     "        new_df.insert(loc=i, column='JC', value=jaccard_score(streamer1_features.reshape(1, -1), streamer2_features.reshape(1, -1))[0][0])\n",
     "    return new_df\n",
     "\n",
-    "df = jaccard_similarity_features(twitch_edges_df,twitch_features_df)"
+    "df = jaccard_similarity_features(df_edges,df_features)"
    ]
   },
   {
@@ -2124,7 +2159,7 @@
     "    return new_df\n",
     "\n",
     "# Assuming your dataframes are loaded as 'edges_df' (with edges) and 'features_df' (with streamer info)\n",
-    "df = jaccard_similarity_features(twitch_edges_df.head(1000), twitch_features_df)  # Calculate Jaccard similarity\n"
+    "df = jaccard_similarity_features(df_edges.head(1000), df_features)  # Calculate Jaccard similarity\n"
    ]
   },
   {
@@ -2162,7 +2197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
